--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Limouzi</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= I18n.locale %>" lang="<%= I18n.locale %>">
+  <head>
+    <title><%= yield :page_title %></title>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
-<%= yield %>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript" charset="utf-8">google.load("jquery", "1.6.1");</script>
 
-</body>
+
+    <!--<script type="text/javascript">google.load("jqueryui", "1.8.13");</script>-->
+    <%= #Bien laisser cette ligne après le chargement de jquery car rails.js surcharge les fonctions de jquery
+    javascript_include_tag 'rails', 'google_map', "date-time", "pop-closeup"  %>
+    <script src="http://maps.google.com/maps?file=api&v=2&key=
+            ABQIAAAAFw0lDRKsdCra15LPvIxvehS3Kl_ZRrzIrsFqDz8GBXIeW1O52xQh3P31Xg2eTvqFRAyuOMY4dQrRQw"
+    type="text/javascript"></script>
+<style type="text/css">
+      span.new { vertical-align: super; color: #cc0000; font-size: 70%; }
+      .encodeBox { width: 800px; height: 60px; font-size: 14px; font-family: Courier; }
+      .encodeBoxListe { width: 800px; height: 150px; font-size: 14px; font-family: Courier; }
+      .inputField { width: 160px; }
+      #pointList { width: 350px; font-size: 12px; }
+      #map_canvas { width: 1000px; height: 800px; border: 1px solid gray; margin-top:6px; }
+      #txtAddress { width: 14em; }
+    </style>
+   
+    <%= csrf_meta_tag %>
+  </head>
+  <body onload=" createMap()">
+
+    <%= yield %>
+
+  </body>
 </html>
